forth/test/fail/test_dot_call_extern_leading_dot.af
\ Must fail to compile.
fun: test_dot_call_extern_leading_dot_fail { -- err }
  [ s" .bad_ext" 0 0 .extern_fun ]
end
